Fix z-index of heading picture overlay

--- a/src/assets/styles/components/_heading.scss
+++ b/src/assets/styles/components/_heading.scss
@@ -61,6 +61,7 @@
       transform: scaleX(0);
       transform-origin: 0% 50%;
       animation: headingOverlay 2s;
+      z-index: 20;
     }
   }
 
